# carrot-transform

./: .dockerignore  .gitignore  .isort.cfg  CONTRIBUTING.md  Dockerfile  README.md  black-files.bat  blip.py  carrot_transform.py  commands.md  development.md  docker-compose.yml  poetry.lock.orig  pyproject.toml  trace.txt  work-me.md
.github/workflows/: carrot-transform.quality.yml  check.container-build.yml  check.quality.yml  check.run-tests.yml  dependency-review.yml  publish.yaml  pypi.publish.yml  pypi.publish.yml-  pytest.yml  release.dev.yml  release.versioned.yml  uv-workflow.yml
carrottransform/: __init__.py  _version.py
carrottransform/cli/: command.py
carrottransform/cli/subcommands/: run.py  run_better.py  run_v2.py
carrottransform/examples/sample_output/: condition_occurrence.tsv  measurement.tsv  observation.tsv  person.tsv  summary_mapstream.tsv
carrottransform/examples/test/: Compare_tsv.py  test_compare_tsv.py  test_file_helpers.py
carrottransform/tools/: __init__.py  args.py  at_path.py  click.py  concept_helpers.py  core.py  core_v2.py  date_helpers.py  db.py  file_helpers.py  mapping_types.py  mappingrules.py  metrics.py  omopcdm.py  orchestrator.py  orchestrator_2.py  outputs.py  person_helpers.py  process_v2.py  record_builder.py  row_processor.py  sources.py  stream_helpers.py  types.py  utils.py  validation.py
cicd/: publish.sh  test-publish.sh
docker/: Dockerfile
scripts/: release.sh
tests/: __init__.py  click_tools.py  clicktools.py  conftest.py  csvrow.py  demo_multiple_patient_files.py  test_alchemy_integration.py  test_args.py  test_bug_gender_need.py  test_concept_helpers.py  test_connection_minio.py  test_connection_postgresql.py  test_connection_trino.py  test_connections_postgresql.py  test_connector_string.py  test_datetime.py  test_docker.py  test_end_to_end.py  test_file_helpers.py  test_integration.py  test_integration2.py  test_integration_pair.py  test_integrations.py  test_mappingrules.py  test_multi.py  test_multi_mapping.py  test_multiple_patient_files.py  test_omopcdm.py  test_orchestrator_v2.py  test_outputs.py  test_person_id_detection.py  test_postgresql.py  test_regression.py  test_rules_json.py  test_run.py  test_sources.py  test_validation.py  testools.py
tests/multi_mapping/: ScanReport.xlsx  demos.csv
tests/regression/lazy-user/: gender-as-race.json  src_PERSON.csv  src_WEIGHT.csv
tests/regression/mireda/: ScanReport.xlsx
tests/test_V2/: SR-For-Transform-DB-Conn-V2.xlsx  rules-v2.json  test_db_connection.py  test_orchestrator.py  test_run_v2.py  test_stream_helpers.py
tests/test_data/: broken_rules.json  test_config.json  test_ddl.sql  wrong-person-table-rules.json
tests/test_data/args/: empty-person-file.csv  no-person-rules.json  reads-from-other-tables.json
tests/test_data/condition/: ScanReport.xlsx  condition_occurrence.tsv  mapping.json  observation.tsv  person.tsv  scans.csv  summary_mapstream.tsv
tests/test_data/dual_weight_observations/: ScanReport.xlsx  clinic-weight.csv  home-weight.csv  patients.csv  rules.json
tests/test_data/duplications/: measurement.tsv  observation.tsv  person.tsv  person_ids.tsv  src_SMOKING.csv  summary_mapstream.tsv
tests/test_data/floats/: ScanReport.xlsx  measurement.tsv  person.tsv  rules.json  summary_mapstream.tsv
tests/test_data/gender_need/: ScanReport.xlsx  gender-need.json  src_demographics.csv  src_smoking.csv
tests/test_data/integration_missing2/: ScanReport.xlsx  rules.json  src_PERSON.csv  src_WEIGHT.csv
tests/test_data/integration_missing_weights/: Rules - integration_test_missing3 - 336 - 2025-07-09 21_32_28.749940.json  ScanReport.xlsx  src_WEIGHT.csv  transform.json
tests/test_data/integration_test1/: Rules-intest6-301-2025-05-21-10_22_56.937314.json  measurement.tsv  person_ids.tsv  src_MEASUREMENT.csv  src_OBSERVATION.csv  src_PERSON.csv  src_SMOKING.csv  src_WEIGHT.csv  summary_mapstream.tsv  transform-rules.json
tests/test_data/integration_test_missing/: ScanReport.xlsx  src_PERSON.csv  src_SMOKING.csv  transform-rules.json
tests/test_data/mapping_person/: multi_mapping.json  observation.tsv  person.tsv  person_ids.tsv  summary_mapstream.tsv
tests/test_data/measure_weight_height/: ScanReport.xlsx  heights.csv  mapping.json  (+5 more)
tests/v2/: test_orchestrator.py  test_record_builder.py
(+52 files in other folders)
