[project]
name = "carrot_transform"
version = "0.4.0"
description = ""
authors = [{ name = "anwarfg", email = "913028+anwarfg@users.noreply.github.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "click>=8.1.7,<9",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "trino>=0.335.0",
]
license = "MIT"



[project.scripts]
carrot-transform = "carrottransform.cli.command:transform"

[dependency-groups]
test = [
    "pytest>=8.3.4,<9",
    "pandas>=2.2.3,<3",
    "coverage>=7.10.3",
]
dev = [
    "black>=24.2.0,<25",
    "build>=1.2.2.post1",
    "ruff>=0.12.0",
    "isort>=6.0.1",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.hatch.build]
include = [
  "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["carrottransform"]

[tool.hatch.build.targets.wheel]
include = ["carrottransform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks integration tests"
]

[[tool.mypy.overrides]]
module = "trino.*"
ignore_missing_imports = true
